--- a/index.html
+++ b/index.html
@@ -35,29 +35,14 @@
         <div class="container text-center" style="margin-bottom: 10rem">
             <div style="margin: 0 auto; width: 170px; height: 170px" id="carouselTwitchEmotes" class="carousel slide" data-bs-ride="carousel">
                 <div id="carouselContent" class="carousel-inner forceCarouselImage">
-                    <div class="carousel-item active" data-bs-interval="15000">
+                    <div class="carousel-item active" data-bs-interval="17000">
                         <img src="/img/home/twitchEmotes/kppa.png" class="d-block w-100" alt="">
-                    </div>
-                    <div class="carousel-item" data-bs-interval="4000">
-                        <img src="/img/home/twitchEmotes/4head.png" class="d-block w-100" alt="">
-                    </div>
-                    <div class="carousel-item" data-bs-interval="4000">
-                        <img src="/img/home/twitchEmotes/cmonbruh.png" class="d-block w-100" alt="">
-                    </div>
-                    <div class="carousel-item" data-bs-interval="4000">
-                        <img src="/img/home/twitchEmotes/feelsbadman.png" class="d-block w-100" alt="">
-                    </div>
-                    <div class="carousel-item" data-bs-interval="4000">
-                        <img src="/img/home/twitchEmotes/mr.png" class="d-block w-100" alt="">
                     </div>
                     <div class="carousel-item" data-bs-interval="4000">
                         <img src="/img/home/twitchEmotes/LUL.png" class="d-block w-100" alt="">
                     </div>
                     <div class="carousel-item" data-bs-interval="4000">
                         <img src="/img/home/twitchEmotes/omegalul.png" class="d-block w-100" alt="">
-                    </div>
-                    <div class="carousel-item" data-bs-interval="4000">
-                        <img src="/img/home/twitchEmotes/trihard.png" class="d-block w-100" alt="">
                     </div>
                     <div class="carousel-item" data-bs-interval="4000">
                         <img src="/img/home/twitchEmotes/pogchamp.png" class="d-block w-100" alt="">
@@ -81,7 +66,19 @@
                         <img src="/img/home/twitchEmotes/jebaited.png" class="d-block w-100" alt="">
                     </div>
                     <div class="carousel-item" data-bs-interval="4000">
-                        <img src="/img/home/twitchEmotes/LUL.png" class="d-block w-100" alt="">
+                        <img src="/img/home/twitchEmotes/4head.png" class="d-block w-100" alt="">
+                    </div>
+                    <div class="carousel-item" data-bs-interval="4000">
+                        <img src="/img/home/twitchEmotes/cmonbruh.png" class="d-block w-100" alt="">
+                    </div>
+                    <div class="carousel-item" data-bs-interval="4000">
+                        <img src="/img/home/twitchEmotes/feelsbadman.png" class="d-block w-100" alt="">
+                    </div>
+                    <div class="carousel-item" data-bs-interval="4000">
+                        <img src="/img/home/twitchEmotes/mr.png" class="d-block w-100" alt="">
+                    </div>
+                    <div class="carousel-item" data-bs-interval="4000">
+                        <img src="/img/home/twitchEmotes/trihard.png" class="d-block w-100" alt="">
                     </div>
                 </div>
             </div>
@@ -92,7 +89,7 @@
                 <h3>
                     This site offers useful tools and functions you can use
                 </h3>
-                <button id="randomSiteTrigger" class="btn btn-outline-dark">
+                <button id="randomSiteTrigger" class="btn btn-outline-dark roundHover">
                     Discover random function
                 </button>
             </div>
