--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!--Java Script-->
     <script src="/js/bootstrap.js"></script>
 </head>
-<body>
+<body class="bg-light">
 
 <!-- Header Area module load via js -->
 <header class=sticky-top id="header"></header>
@@ -51,9 +51,6 @@
                         <img src="/img/home/twitchEmotes/jebaited.png" class="d-block w-100" alt="">
                     </div>
                     <div class="carousel-item" data-bs-interval="4000">
-                        <img src="/img/home/twitchEmotes/hahaa.png" class="d-block w-100" alt="">
-                    </div>
-                    <div class="carousel-item" data-bs-interval="4000">
                         <img src="/img/home/twitchEmotes/feelsgoodman.png" class="d-block w-100" alt="">
                     </div>
                     <div class="carousel-item" data-bs-interval="4000">
@@ -64,12 +61,6 @@
                     </div>
                     <div class="carousel-item" data-bs-interval="4000">
                         <img src="/img/home/twitchEmotes/jebaited.png" class="d-block w-100" alt="">
-                    </div>
-                    <div class="carousel-item" data-bs-interval="4000">
-                        <img src="/img/home/twitchEmotes/4head.png" class="d-block w-100" alt="">
-                    </div>
-                    <div class="carousel-item" data-bs-interval="4000">
-                        <img src="/img/home/twitchEmotes/cmonbruh.png" class="d-block w-100" alt="">
                     </div>
                     <div class="carousel-item" data-bs-interval="4000">
                         <img src="/img/home/twitchEmotes/feelsbadman.png" class="d-block w-100" alt="">
@@ -83,12 +74,8 @@
                 </div>
             </div>
             <div>
-                <h1>
-                    Take a cookie and look around
-                </h1>
-                <h3>
-                    This site offers useful tools and functions you can use
-                </h3>
+                <h1>Take a cookie and look around</h1>
+                <h3>This site offers useful tools and functions you can use</h3>
                 <button id="randomSiteTrigger" class="btn btn-outline-dark roundHover">
                     Discover random function
                 </button>
