--- a/modules/header.html
+++ b/modules/header.html
@@ -16,7 +16,10 @@
         <div class="col-8 gx-2 collapse navbar-collapse justify-content-end" id="navbar">
             <ul class="navbar-nav nav-style" style="font-weight: 500">
                 <li class="nav-item">
-                    <a class="nav-link" href="/">SIC</a>
+                    <a class="nav-link" href="/sic/">SIC</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/minecraft/">MINECRAFT</a>
                 </li>
             </ul>
         </div>
