--- a/schoolTracker/index.html
+++ b/schoolTracker/index.html
@@ -4,9 +4,12 @@
     <!--Required Meta-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:image" content="/img/favicon_io/apple-touch-icon.png"/>
+    <!-- Social Media Headline -->
+    <meta property="og:title" content="Parcivads SchoolTracker to check for classworks and other media"/>
+    <meta property="og:image" content="http://localhost/img/header/parcivad.png"/>
+    <!-- Standard Meta -->
     <meta name="theme-color" content="#0E0F10">
-    <title>Parcivad | SIC</title>
+    <title>Parcivad | SchoolTracker</title>
     <!--Favicon Icons-->
     <link href="/img/favicon_io/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
     <link href="/img/favicon_io/favicon-32x32.png" rel="icon" type="image/png" sizes="32x32">
@@ -78,7 +81,6 @@
                             <th style="width: 100px; border-radius: 0 10px 0 0;" scope="col">Kommentar</th>
                         </tr>
                         </thead>
-                        <tbody id="classworkTableBody"></tbody>
                     </table>
                 </div>
             </div>
@@ -245,6 +247,6 @@
 
 <script src="/js/jquery-3.6.0.min.js"></script>
 <script src="/js/loader.js"></script>
-<script src="/js/sic.js"></script>
+<script src="/js/schoolTracker.js"></script>
 </body>
 </html>
