--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <!--Required Meta-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:image" content="/img/favicon_io/apple-touch-icon.png"/>
+    <!-- Social Media Headline -->
+    <meta property="og:title" content="Parcivads Tool and Function Website"/>
+    <meta property="og:image" content="http://localhost/img/header/parcivad.png"/>
+    <!-- Standard Meta -->
     <meta name="theme-color" content="#0E0F10">
     <title>Parcivad | Start</title>
     <!--Favicon Icons-->
@@ -16,7 +19,7 @@
     <!--Description Meta tags-->
     <meta name="title" content="Parcivad's Website">
     <meta name="description"
-          content="Start Site of parcivads Website ;D">
+          content="Start Seite von parcivads Website ;D">
 
     <!--Bootstrap CSS-->
     <link href="/css/bootstrap.css" rel="stylesheet" type="text/css">
@@ -31,6 +34,7 @@
 
 <!-- Content of the page -->
 <main>
+    <!-- Page Thumbnail -->
     <div class="container-fluid introduction align-items-center">
         <div class="container text-center" style="margin-bottom: 10rem">
             <div style="margin: 0 auto; width: 170px; height: 170px" id="carouselTwitchEmotes" class="carousel slide" data-bs-ride="carousel">
@@ -80,6 +84,14 @@
                     Discover random function
                 </button>
             </div>
+        </div>
+    </div>
+    <div class="container" style="margin-top: -6rem">
+        <h3>IP-Symcon Modules</h3>
+        <div class="pt-2 symconModules">
+            <img style="height: 4rem;" src="/img/home/symconModules/homeConnect.png">
+            <img style="height: 3.7rem;" src="/img/home/symconModules/reolink.png">
+            <img style="height: 3.5rem;" src="/img/home/symconModules/magicHome.png">
         </div>
     </div>
 </main>
