make no data feedback

--- a/schoolTracker/index.html
+++ b/schoolTracker/index.html
@@ -81,6 +81,7 @@
                             <th style="width: 100px; border-radius: 0 10px 0 0;" scope="col">Kommentar</th>
                         </tr>
                         </thead>
+                        <tbody id="classworkTableBody"></tbody>
                     </table>
                 </div>
             </div>
