change column width

--- a/schoolTracker/index.html
+++ b/schoolTracker/index.html
@@ -55,7 +55,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-0 col-xl-4 text-end schoolLogo d-none d-xxl-block">
+            <div class="col-0 col-xl-4 text-end schoolLogo d-none d-xl-block">
                 <img id="schoolLogo" src="" onerror="this.src='/img/sic/search.svg';">
             </div>
         </div>
