Add new page Insektenhotel

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <!-- Content of the page -->
 <main>
     <!-- Page Thumbnail -->
-    <div class="container-fluid introduction align-items-center">
+    <div class="container-fluid introduction align-items-center pt-5 pt-md-0">
         <div class="container text-center" style="margin-bottom: 10rem">
             <div style="margin: 0 auto; width: 170px; height: 170px" id="carouselTwitchEmotes" class="carousel slide" data-bs-ride="carousel">
                 <div id="carouselContent" class="carousel-inner forceCarouselImage">
@@ -89,9 +89,10 @@
     <div class="container" style="margin-top: -6rem">
         <h3>IP-Symcon Modules</h3>
         <div class="pt-2 symconModules">
-            <img style="height: 4rem;" src="/img/home/symconModules/homeConnect.png">
-            <img style="height: 3.7rem;" src="/img/home/symconModules/reolink.png">
-            <img style="height: 3.5rem;" src="/img/home/symconModules/magicHome.png">
+            <a href="https://github.com/parcivad/ips-home-connect"><img style="height: 4rem;" src="/img/home/symconModules/homeConnect.png"></a>
+            <a href="https://github.com/parcivad/ips-reolink"><img style="height: 3.7rem;" src="/img/home/symconModules/reolink.png"></a>
+            <a href="https://github.com/parcivad/ips-magic-home-controller"><img style="height: 3.5rem;" src="/img/home/symconModules/magicHome.png"></a>
+            <a href="https://github.com/parcivad/ips-logger"><img style="height: 3.2rem;" src="/img/home/symconModules/logger.png"></a>
         </div>
     </div>
 </main>
