--- a/404.html
+++ b/404.html
@@ -5,12 +5,12 @@
     <!--Required Meta-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:image" content="/img/favicon_io/apple-touch-icon.png"/>
-    <meta name="theme-color" content="#292c2f">
-    <meta name="title" content="Parcivad 404">
-    <meta name="description"
-          content="404 page not found">
-    <title>Parcivad | :C</title>
+    <!-- Social Media Headline -->
+    <meta property="og:title" content="Parcivads SchoolTracker to check for classworks and other media"/>
+    <meta property="og:image" content="http://localhost/img/header/parcivad.png"/>
+    <!-- Standard Meta -->
+    <meta name="theme-color" content="#0E0F10">
+    <title>Parcivad | ERR</title>
     <!--Favicon-->
     <link href="/img/favicon_io/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
     <link href="/img/favicon_io/favicon-32x32.png" rel="icon" type="image/png" sizes="32x32">
@@ -31,6 +31,10 @@
     <!--Introduction-->
     <div class="container px-4 md-3 align-items-center text-center" style="padding-top: 2rem;">
         <h1>
+            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="red" class="bi bi-exclamation-triangle" viewBox="0 0 16 19">
+                <path d="M7.938 2.016A.13.13 0 0 1 8.002 2a.13.13 0 0 1 .063.016.146.146 0 0 1 .054.057l6.857 11.667c.036.06.035.124.002.183a.163.163 0 0 1-.054.06.116.116 0 0 1-.066.017H1.146a.115.115 0 0 1-.066-.017.163.163 0 0 1-.054-.06.176.176 0 0 1 .002-.183L7.884 2.073a.147.147 0 0 1 .054-.057zm1.044-.45a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566z"/>
+                <path d="M7.002 12a1 1 0 1 1 2 0 1 1 0 0 1-2 0zM7.1 5.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995z"/>
+            </svg>
             404 <span>Error</span>
         </h1>
         <p>
