--- a/modules/header.html
+++ b/modules/header.html
@@ -19,7 +19,7 @@
                     <a class="nav-link" href="/schoolTracker/">SCHOOL TRACKER</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/minecraft/">MINECRAFT</a>
+                    <a class="nav-link" href="/insektenhotel/">PROJEKTTAGE</a>
                 </li>
             </ul>
         </div>
