--- a/insektenhotel/index.html
+++ b/insektenhotel/index.html
@@ -91,16 +91,19 @@
                 </p>
                 <div>
                     <p>
+                        <img class="pointLeft" src="/img/insektenhotel/pointLeft.svg" width="30" height="30">
                         Bambus- und Schilfrohr
-                        <img class="collapse show" src="/img/insektenhotel/point.svg" width="30" height="30">
+                        <img class="point" src="/img/insektenhotel/point.svg" width="30" height="30">
                     </p>
                     <p>
+                        <img class="pointLeft" src="/img/insektenhotel/pointLeft.svg" width="30" height="30">
                         Holz mit vielen eingebohrten Löchern
-                        <img class="collapse show" src="/img/insektenhotel/point.svg" width="30" height="30">
+                        <img class="point" src="/img/insektenhotel/point.svg" width="30" height="30">
                     </p>
                     <p>
+                        <img class="pointLeft" src="/img/insektenhotel/pointLeft.svg" width="30" height="30">
                         Strangfalzziegel
-                        <img class="collapse show" src="/img/insektenhotel/point.svg" width="30" height="30">
+                        <img class="point" src="/img/insektenhotel/point.svg" width="30" height="30">
                     </p>
                 </div>
                 <p>
@@ -202,32 +205,66 @@
     </div>
     <!-- Example Rotation -->
     <div class="container" style="padding-top: 30px">
-        <h3>Beispiele und Inspiration</h3>
-        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <div class="row row-cols-2">
+            <div class="col-12 col-xl-4">
+                <h3>Beispiele</h3>
+                <div id="carouselExamples" class="carousel slide" data-bs-ride="true">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExamples" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExamples" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExamples" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                        <button type="button" data-bs-target="#carouselExamples" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                        <button type="button" data-bs-target="#carouselExamples" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                    </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active forceCarouselImage">
+                            <img src="/img/insektenhotel/bilder/1.PNG" class="d-block">
+                        </div>
+                        <div class="carousel-item forceCarouselImage">
+                            <img src="/img/insektenhotel/bilder/2.jpg" class="d-block">
+                        </div>
+                        <div class="carousel-item forceCarouselImage">
+                            <img src="/img/insektenhotel/bilder/3.PNG" class="d-block">
+                        </div>
+                        <div class="carousel-item forceCarouselImage">
+                            <img src="/img/insektenhotel/bilder/4.PNG" class="d-block">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExamples" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExamples" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
             </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="..." class="d-block w-50" alt="...">
-                </div>
-                <div class="carousel-item">
-                    <img src="..." class="d-block w-50" alt="...">
-                </div>
-                <div class="carousel-item">
-                    <img src="..." class="d-block w-50" alt="...">
+            <div class="col-12 col-xl-8">
+                <h3>Unsere Entwürfe</h3>
+                <div id="carouselEntwurf" class="carousel carousel-dark slide" data-bs-ride="true">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselEntwurf" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselEntwurf" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active forceCarouselImage">
+                            <img src="/img/insektenhotel/entwürfe/1.jpeg" class="d-block">
+                        </div>
+                        <div class="carousel-item forceCarouselImage">
+                            <img src="/img/insektenhotel/entwürfe/2.png" class="d-block">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselEntwurf" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselEntwurf" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
                 </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
         </div>
     </div>
 </main>
