--- a/insektenhotel/index.html
+++ b/insektenhotel/index.html
@@ -39,7 +39,7 @@
         <div class="container text-start">
             <div>
                 <h1>Insektenhotel</h1>
-                <h3>Ein Projekt der 10a</h3>
+                <h3>Ein Projekt der 10a vom 22.07.2022</h3>
             </div>
         </div>
     </div>
