--- a/modules/header.html
+++ b/modules/header.html
@@ -21,6 +21,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/insektenhotel/">PROJEKTTAGE</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/sporttage/">SPORTTAGE</a>
+                </li>
             </ul>
         </div>
         <div class="col-2 col-sm-1 collapse navbar-collapse justify-content-end">
